--- a/project/package.json
+++ b/project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "less": "^4.1.3",
     "typescript": "^5.0.2",
+    "uuid": "^9.0.0",
     "vite": "^4.4.5"
   }
 }
