--- a/project/package.json
+++ b/project/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "less": "^4.1.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "typescript": "^5.0.2",
     "uuid": "^9.0.0",
     "vite": "^4.4.5"
