--- a/project/package.json
+++ b/project/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-react": "^4.0.3",
     "axios": "^1.4.0",
     "eslint": "^8.45.0",
