提交使用md和修改部分东西

--- a/project/package.json
+++ b/project/package.json
@@ -5,6 +5,10 @@
   "main": "main.js",
   "author": "LansDarkLauh",
   "description": "Used in Kartrider Champion（Personal/Common）",
+  "productName": "KartriderTool",
+  "win": {
+      "icon": "dist/logo_mini_ico.ico"
+    },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
