--- a/project/package.json
+++ b/project/package.json
@@ -18,12 +18,14 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-transition-group": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-legacy": "^4.1.1",
