--- a/project/package.json
+++ b/project/package.json
@@ -7,8 +7,23 @@
   "description": "Used in Kartrider Champion（Personal/Common）",
   "productName": "KartriderTool",
   "win": {
-      "icon": "dist/logo_mini_ico.ico"
-    },
+    "icon": "dist/logo_mini_ico.ico"
+  },
+  "iohook": {
+    "targets": [
+      "node-83",
+      "electron-87"
+    ],
+    "platforms": [
+      "win32",
+      "darwin",
+      "linux"
+    ],
+    "arches": [
+      "x64",
+      "ia32"
+    ]
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -23,6 +38,7 @@
     "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.2",
     "electron-squirrel-startup": "^1.0.0",
+    "iohook": "^0.9.3",
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^6.5.10",
     "react": "^18.2.0",
@@ -49,12 +65,13 @@
     "@vitejs/plugin-react": "^4.0.3",
     "axios": "^1.4.0",
     "concurrently": "^8.2.1",
-    "electron": "^26.1.0",
+    "electron": "12.2.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "less": "^4.1.3",
     "nanoid": "^4.0.2",
+    "node-abi": "^3.47.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "typescript": "^5.0.2",
