--- a/project/package.json
+++ b/project/package.json
@@ -38,7 +38,7 @@
     "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.2",
     "electron-squirrel-startup": "^1.0.0",
-    "iohook": "^0.9.3",
+    "iohook": "0.9.2",
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^6.5.10",
     "react": "^18.2.0",
