--- a/project/package.json
+++ b/project/package.json
@@ -7,8 +7,8 @@
   "description": "Used in Kartrider Champion（Personal/Common）",
   "productName": "KartriderTool",
   "win": {
-      "icon": "dist/logo_mini_ico.ico"
-    },
+    "icon": "dist/logo_mini_ico.ico"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -23,6 +23,14 @@
     "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.2",
     "electron-squirrel-startup": "^1.0.0",
+    "koa": "^2.15.3",
+    "koa-body": "^6.0.1",
+    "koa-bodyparser": "^4.4.1",
+    "koa-cors": "^0.0.16",
+    "koa-json": "^2.0.2",
+    "koa-router": "^12.0.1",
+    "koa-websocket": "^7.0.0",
+    "koa2-cors": "^2.0.6",
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^6.5.10",
     "react": "^18.2.0",
